
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "whcatmeme"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["serde-json"] }
napi-derive = "3.0.0"
meme_generator = "0.2.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console = { version = "0.16.2", features = ["std"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
